<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_detector"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPeach"
    tools:context="tumblrr.utd.com.stepcounter.MainActivity">

    <TextView
        android:id="@+id/text_inchstep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="42dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="14sp"
        android:paddingLeft="14sp"
        android:paddingRight="14sp"
        android:paddingTop="14sp"
        android:text="@string/inch_step"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edittext_inchstep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="42dp"
        android:layout_toRightOf="@+id/text_inchstep"
        android:hint="@string/inch_value"
        android:singleLine="true"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_inchstep"
        android:layout_below="@+id/text_inchstep"
        android:layout_marginTop="80dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="14sp"
        android:paddingLeft="14sp"
        android:paddingRight="14sp"
        android:paddingTop="14sp"
        android:text="@string/counter"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/edittext_inchstep"
        android:layout_toRightOf="@+id/text_counter"
        android:textSize="35sp"/>

    <Button
        android:id="@+id/button_start"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_alignStart="@+id/text_counter"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="116dp"
        android:layout_marginEnd="19dp"
        android:background="@color/colorPrimary"
        android:text="@string/start"
        android:textSize="25sp"/>


    <Button
        android:id="@+id/button_stop"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="116dp"
        android:layout_marginEnd="19dp"
        android:background="@color/colorPrimary"
        android:text="@string/stop"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@color/colorPrimary"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>